--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             zoom: config.chapters[0].location.zoom,
             bearing: config.chapters[0].location.bearing,
             pitch: config.chapters[0].location.pitch,
-            interactive: true,
+            interactive: false,
             projection: config.projection
         });
 
